# darling-gpatch

./: CMakeLists.txt
patch/: config.h
